resource: Add resource set range and size helpers (jsc#PED-13728 jsc#PED-13762).

--- a/series.conf
+++ b/series.conf
@@ -2243,6 +2243,7 @@
 	patches.suse/PCI-pwrctl-Create-pwrctl-device-only-if-at-least-one.patch
 	patches.suse/PCI-pwrctl-Ensure-that-pwrctl-drivers-are-probed-bef.patch
 	patches.suse/PCI-Add-reset_subordinate-to-reset-hierarchy-below-b.patch
+	patches.suse/resource-Add-resource-set-range-and-size-helpers.patch
 	patches.suse/PCI-Detect-and-trust-built-in-Thunderbolt-chips.patch
 	patches.suse/PCI-Add-TLP-Processing-Hints-TPH-support.patch
 	patches.suse/PCI-TPH-Add-Steering-Tag-support.patch
