--- a/series.conf
+++ b/series.conf
@@ -11930,6 +11930,7 @@
 	patches.suse/wifi-wilc1000-avoid-buffer-overflow-in-WID-string-co.patch
 	patches.suse/wifi-ath11k-fix-group-data-packet-drops-during-rekey.patch
 	patches.suse/ice-fix-NULL-access-of-tx-in_use-in-ice_ll_ts_intr.patch
+	patches.suse/idpf-fix-UAF-in-RDMA-core-aux-dev-deinitialization.patch
 	patches.suse/i40e-Fix-potential-invalid-access-when-MAC-list-is-e.patch
 	patches.suse/ixgbe-fix-incorrect-map-used-in-eee-linkmode.patch
 	patches.suse/ax25-properly-unshare-skbs-in-ax25_kiss_rcv.patch
