idpf: add flow steering support (jsc#PED-13728).

--- a/series.conf
+++ b/series.conf
@@ -11178,6 +11178,7 @@
 	patches.suse/net-usb-cdc-ncm-check-for-filtering-capability.patch
 	patches.suse/virtchnl2-rename-enum-virtchnl2_cap_rss.patch
 	patches.suse/virtchnl2-add-flow-steering-support.patch
+	patches.suse/idpf-add-flow-steering-support.patch
 	patches.suse/xfrm-Duplicate-SPI-Handling.patch
 	patches.suse/wifi-rtw89-Fix-rtw89_mac_power_switch-for-USB.patch
 	patches.suse/wifi-rtl8xxxu-Fix-RX-skb-size-for-aggregation-disabl.patch
