idpf: stop Tx if there are insufficient buffer resources (jsc#PED-13728).

--- a/series.conf
+++ b/series.conf
@@ -11818,6 +11818,7 @@
 	patches.suse/idpf-improve-when-to-set-RE-bit-logic.patch
 	patches.suse/idpf-simplify-and-fix-splitq-Tx-packet-rollback-erro.patch
 	patches.suse/idpf-replace-flow-scheduling-buffer-ring-with-buffer.patch
+	patches.suse/idpf-stop-Tx-if-there-are-insufficient-buffer-resour.patch
 	patches.suse/Bluetooth-hci_event-Treat-UNKNOWN_CONN_ID-on-disconn.patch
 	patches.suse/Bluetooth-hci_event-Mark-connection-as-closed-during.patch
 	patches.suse/Bluetooth-hci_event-Detect-if-HCI_EV_NUM_COMP_PKTS-i.patch
