idpf: add Tx timestamp capabilities negotiation (jsc#PED-13728 jsc#PED-13762).

--- a/series.conf
+++ b/series.conf
@@ -9583,6 +9583,7 @@
 	patches.suse/idpf-negotiate-PTP-capabilities-and-get-PTP-clock.patch
 	patches.suse/idpf-add-mailbox-access-to-read-PTP-clock-time.patch
 	patches.suse/idpf-add-PTP-clock-configuration.patch
+	patches.suse/idpf-add-Tx-timestamp-capabilities-negotiation.patch
 	patches.suse/Bluetooth-ISO-Fix-not-using-SID-from-adv-report.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3630-for-MT7925.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3584-for-MT7922.patch
