--- a/series.conf
+++ b/series.conf
@@ -34518,6 +34518,7 @@
 	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
 	patches.suse/clk-tegra-do-not-overallocate-memory-for-bpmp-clocks.patch
+	patches.suse/clk-mediatek-mt8195-infra_ao-Fix-parent-for-infra_ao.patch
 
 	########################################################
 	# end of sorted patches
