misc: fastrpc: Fix fastrpc_map_lookup operation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34524,6 +34524,7 @@
 	patches.suse/staging-axis-fifo-fix-maximum-TX-packet-length-check.patch
 	patches.suse/staging-axis-fifo-fix-TX-handling-on-copy_from_user-.patch
 	patches.suse/staging-axis-fifo-flush-RX-FIFO-on-read-errors.patch
+	patches.suse/misc-fastrpc-Fix-fastrpc_map_lookup-operation.patch
 
 	########################################################
 	# end of sorted patches
