--- a/series.conf
+++ b/series.conf
@@ -34520,6 +34520,7 @@
 	patches.suse/clk-tegra-do-not-overallocate-memory-for-bpmp-clocks.patch
 	patches.suse/clk-mediatek-mt8195-infra_ao-Fix-parent-for-infra_ao.patch
 	patches.suse/clk-mediatek-clk-mux-Do-not-pass-flags-to-clk_mux_de.patch
+	patches.suse/clk-at91-peripheral-fix-return-value.patch
 
 	########################################################
 	# end of sorted patches
