staging: axis-fifo: flush RX FIFO on read errors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34523,6 +34523,7 @@
 	patches.suse/clk-at91-peripheral-fix-return-value.patch
 	patches.suse/staging-axis-fifo-fix-maximum-TX-packet-length-check.patch
 	patches.suse/staging-axis-fifo-fix-TX-handling-on-copy_from_user-.patch
+	patches.suse/staging-axis-fifo-flush-RX-FIFO-on-read-errors.patch
 
 	########################################################
 	# end of sorted patches
