staging: axis-fifo: fix maximum TX packet length check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34521,6 +34521,7 @@
 	patches.suse/clk-mediatek-mt8195-infra_ao-Fix-parent-for-infra_ao.patch
 	patches.suse/clk-mediatek-clk-mux-Do-not-pass-flags-to-clk_mux_de.patch
 	patches.suse/clk-at91-peripheral-fix-return-value.patch
+	patches.suse/staging-axis-fifo-fix-maximum-TX-packet-length-check.patch
 
 	########################################################
 	# end of sorted patches
