misc: fastrpc: fix possible map leak in fastrpc_put_args (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34525,6 +34525,7 @@
 	patches.suse/staging-axis-fifo-fix-TX-handling-on-copy_from_user-.patch
 	patches.suse/staging-axis-fifo-flush-RX-FIFO-on-read-errors.patch
 	patches.suse/misc-fastrpc-Fix-fastrpc_map_lookup-operation.patch
+	patches.suse/misc-fastrpc-fix-possible-map-leak-in-fastrpc_put_ar.patch
 
 	########################################################
 	# end of sorted patches
