--- a/series.conf
+++ b/series.conf
@@ -34526,6 +34526,7 @@
 	patches.suse/staging-axis-fifo-flush-RX-FIFO-on-read-errors.patch
 	patches.suse/misc-fastrpc-Fix-fastrpc_map_lookup-operation.patch
 	patches.suse/misc-fastrpc-fix-possible-map-leak-in-fastrpc_put_ar.patch
+	patches.suse/misc-fastrpc-Skip-reference-for-DMA-handles.patch
 
 	########################################################
 	# end of sorted patches
