misc: fastrpc: Save actual DMA size in fastrpc_map structure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12319,6 +12319,7 @@
 	patches.suse/staging-axis-fifo-fix-maximum-TX-packet-length-check.patch
 	patches.suse/staging-axis-fifo-fix-TX-handling-on-copy_from_user-.patch
 	patches.suse/staging-axis-fifo-flush-RX-FIFO-on-read-errors.patch
+	patches.suse/misc-fastrpc-Save-actual-DMA-size-in-fastrpc_map-str.patch
 
 	########################################################
 	# end of sorted patches
