misc: fastrpc: fix possible map leak in fastrpc_put_args (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12321,6 +12321,7 @@
 	patches.suse/staging-axis-fifo-flush-RX-FIFO-on-read-errors.patch
 	patches.suse/misc-fastrpc-Save-actual-DMA-size-in-fastrpc_map-str.patch
 	patches.suse/misc-fastrpc-Fix-fastrpc_map_lookup-operation.patch
+	patches.suse/misc-fastrpc-fix-possible-map-leak-in-fastrpc_put_ar.patch
 
 	########################################################
 	# end of sorted patches
