--- a/series.conf
+++ b/series.conf
@@ -12313,6 +12313,7 @@
 	patches.suse/clk-mediatek-mt8195-infra_ao-Fix-parent-for-infra_ao.patch
 	patches.suse/clk-mediatek-clk-mux-Do-not-pass-flags-to-clk_mux_de.patch
 	patches.suse/clk-at91-peripheral-fix-return-value.patch
+	patches.suse/cpufreq-mediatek-fix-device-leak-on-probe-failure.patch
 
 	########################################################
 	# end of sorted patches
