clk: tegra: do not overallocate memory for bpmp clocks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12306,6 +12306,7 @@
 	patches.suse/PCI-ACPI-Fix-pci_acpi_preserve_config-memory-leak.patch
 	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
+	patches.suse/clk-tegra-do-not-overallocate-memory-for-bpmp-clocks.patch
 
 	########################################################
 	# end of sorted patches
