clk: renesas: cpg-mssr: Fix memory leak in cpg_mssr_reserved_init() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12307,6 +12307,7 @@
 	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
 	patches.suse/clk-tegra-do-not-overallocate-memory-for-bpmp-clocks.patch
+	patches.suse/clk-renesas-cpg-mssr-Fix-memory-leak-in-cpg_mssr_res.patch
 
 	########################################################
 	# end of sorted patches
