staging: axis-fifo: fix TX handling on copy_from_user() failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12317,6 +12317,7 @@
 	patches.suse/cpufreq-tegra186-Set-target-frequency-for-all-cpus-i.patch
 	patches.suse/ACPI-battery-Add-synchronization-between-interface-u.patch
 	patches.suse/staging-axis-fifo-fix-maximum-TX-packet-length-check.patch
+	patches.suse/staging-axis-fifo-fix-TX-handling-on-copy_from_user-.patch
 
 	########################################################
 	# end of sorted patches
