--- a/series.conf
+++ b/series.conf
@@ -12316,6 +12316,7 @@
 	patches.suse/cpufreq-mediatek-fix-device-leak-on-probe-failure.patch
 	patches.suse/cpufreq-tegra186-Set-target-frequency-for-all-cpus-i.patch
 	patches.suse/ACPI-battery-Add-synchronization-between-interface-u.patch
+	patches.suse/staging-axis-fifo-fix-maximum-TX-packet-length-check.patch
 
 	########################################################
 	# end of sorted patches
