--- a/series.conf
+++ b/series.conf
@@ -12312,6 +12312,7 @@
 	patches.suse/clk-qcom-tcsrcc-x1e80100-Set-the-bi_tcxo-as-parent-t.patch
 	patches.suse/clk-mediatek-mt8195-infra_ao-Fix-parent-for-infra_ao.patch
 	patches.suse/clk-mediatek-clk-mux-Do-not-pass-flags-to-clk_mux_de.patch
+	patches.suse/clk-at91-peripheral-fix-return-value.patch
 
 	########################################################
 	# end of sorted patches
