ACPI: battery: Add synchronization between interface updates (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12315,6 +12315,7 @@
 	patches.suse/clk-at91-peripheral-fix-return-value.patch
 	patches.suse/cpufreq-mediatek-fix-device-leak-on-probe-failure.patch
 	patches.suse/cpufreq-tegra186-Set-target-frequency-for-all-cpus-i.patch
+	patches.suse/ACPI-battery-Add-synchronization-between-interface-u.patch
 
 	########################################################
 	# end of sorted patches
