--- a/series.conf
+++ b/series.conf
@@ -12310,6 +12310,7 @@
 	patches.suse/clk-renesas-cpg-mssr-Fix-memory-leak-in-cpg_mssr_res.patch
 	patches.suse/clk-qcom-common-Fix-NULL-vs-IS_ERR-check-in-qcom_cc_.patch
 	patches.suse/clk-qcom-tcsrcc-x1e80100-Set-the-bi_tcxo-as-parent-t.patch
+	patches.suse/clk-mediatek-mt8195-infra_ao-Fix-parent-for-infra_ao.patch
 
 	########################################################
 	# end of sorted patches
