cpufreq: tegra186: Set target frequency for all cpus in policy (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12314,6 +12314,7 @@
 	patches.suse/clk-mediatek-clk-mux-Do-not-pass-flags-to-clk_mux_de.patch
 	patches.suse/clk-at91-peripheral-fix-return-value.patch
 	patches.suse/cpufreq-mediatek-fix-device-leak-on-probe-failure.patch
+	patches.suse/cpufreq-tegra186-Set-target-frequency-for-all-cpus-i.patch
 
 	########################################################
 	# end of sorted patches
