clk: qcom: common: Fix NULL vs IS_ERR() check in qcom_cc_icc_register() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12308,6 +12308,7 @@
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
 	patches.suse/clk-tegra-do-not-overallocate-memory-for-bpmp-clocks.patch
 	patches.suse/clk-renesas-cpg-mssr-Fix-memory-leak-in-cpg_mssr_res.patch
+	patches.suse/clk-qcom-common-Fix-NULL-vs-IS_ERR-check-in-qcom_cc_.patch
 
 	########################################################
 	# end of sorted patches
