--- a/series.conf
+++ b/series.conf
@@ -12311,6 +12311,7 @@
 	patches.suse/clk-qcom-common-Fix-NULL-vs-IS_ERR-check-in-qcom_cc_.patch
 	patches.suse/clk-qcom-tcsrcc-x1e80100-Set-the-bi_tcxo-as-parent-t.patch
 	patches.suse/clk-mediatek-mt8195-infra_ao-Fix-parent-for-infra_ao.patch
+	patches.suse/clk-mediatek-clk-mux-Do-not-pass-flags-to-clk_mux_de.patch
 
 	########################################################
 	# end of sorted patches
