--- a/series.conf
+++ b/series.conf
@@ -12318,6 +12318,7 @@
 	patches.suse/ACPI-battery-Add-synchronization-between-interface-u.patch
 	patches.suse/staging-axis-fifo-fix-maximum-TX-packet-length-check.patch
 	patches.suse/staging-axis-fifo-fix-TX-handling-on-copy_from_user-.patch
+	patches.suse/staging-axis-fifo-flush-RX-FIFO-on-read-errors.patch
 
 	########################################################
 	# end of sorted patches
