--- a/series.conf
+++ b/series.conf
@@ -12077,6 +12077,7 @@
 	patches.suse/firmware-meson_sm-fix-device-leak-at-probe.patch
 	patches.suse/memory-samsung-exynos-srom-Fix-of_iomap-leak-in-exyn.patch
 	patches.suse/bus-fsl-mc-Check-return-value-of-platform_get_resour.patch
+	patches.suse/usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-through-s.patch
 	patches.suse/Revert-usb-xhci-Avoid-Stop-Endpoint-retry-loop-if-th.patch
 
 	########################################################
