x86/topology: Implement topology_is_core_online() to address SMT regression (jsc#PED-13815).

--- a/series.conf
+++ b/series.conf
@@ -55475,6 +55475,7 @@
 	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
 	patches.suse/fbcon-Fix-OOB-access-in-font-allocation.patch
 	patches.suse/drm-panthor-Defer-scheduler-entitiy-destruction-to-q.patch
+	patches.suse/x86-topology-Implement-topology_is_core_online-to-address-.patch
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tr.patch
 
