arm64: mte: Do not flag the zero page as PG_mte_tagged (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -34517,6 +34517,7 @@
 	patches.suse/PCI-tegra-Convert-struct-tegra_msi-mask_lock-into-ra.patch
 	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
+	patches.suse/arm64-mte-Do-not-flag-the-zero-page-as-PG_mte_tagged.patch
 
 	########################################################
 	# end of sorted patches
