--- a/series.conf
+++ b/series.conf
@@ -12145,6 +12145,7 @@
 	patches.suse/scsi-lpfc-Convert-debugfs-directory-counts-from-atom.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.11.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.11-patches.patch
+	patches.suse/arm64-mte-Do-not-flag-the-zero-page-as-PG_mte_tagged.patch
 
 	########################################################
 	# end of sorted patches
