Revert "fs: make vfs_fileattr_[get|set] return -EOPNOTSUPP" (bsc#1251048).

--- a/series.conf
+++ b/series.conf
@@ -96,6 +96,7 @@
 	# to area specific sections below.
 	########################################################
 	patches.suse/firmware-qemu_fw_cfg-Do-not-hard-depend-on-CONFIG_HA.patch
+	patches.suse/Revert-fs-make-vfs_fileattr_-get-set-return-EOPNOTSU.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
