--- a/series.conf
+++ b/series.conf
@@ -34527,6 +34527,7 @@
 	patches.suse/misc-fastrpc-Fix-fastrpc_map_lookup-operation.patch
 	patches.suse/misc-fastrpc-fix-possible-map-leak-in-fastrpc_put_ar.patch
 	patches.suse/misc-fastrpc-Skip-reference-for-DMA-handles.patch
+	patches.suse/Input-uinput-zero-initialize-uinput_ff_upload_compat.patch
 
 	########################################################
 	# end of sorted patches
