--- a/series.conf
+++ b/series.conf
@@ -34528,6 +34528,7 @@
 	patches.suse/misc-fastrpc-fix-possible-map-leak-in-fastrpc_put_ar.patch
 	patches.suse/misc-fastrpc-Skip-reference-for-DMA-handles.patch
 	patches.suse/Input-uinput-zero-initialize-uinput_ff_upload_compat.patch
+	patches.suse/mailbox-zynqmp-ipi-Remove-redundant-mbox_controller_.patch
 
 	########################################################
 	# end of sorted patches
