mailbox: zynqmp-ipi: Remove dev.parent check in zynqmp_ipi_free_mboxes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34529,6 +34529,7 @@
 	patches.suse/misc-fastrpc-Skip-reference-for-DMA-handles.patch
 	patches.suse/Input-uinput-zero-initialize-uinput_ff_upload_compat.patch
 	patches.suse/mailbox-zynqmp-ipi-Remove-redundant-mbox_controller_.patch
+	patches.suse/mailbox-zynqmp-ipi-Remove-dev.parent-check-in-zynqmp.patch
 
 	########################################################
 	# end of sorted patches
