mailbox: zynqmp-ipi: Fix out-of-bounds access in mailbox cleanup loop (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34530,6 +34530,7 @@
 	patches.suse/Input-uinput-zero-initialize-uinput_ff_upload_compat.patch
 	patches.suse/mailbox-zynqmp-ipi-Remove-redundant-mbox_controller_.patch
 	patches.suse/mailbox-zynqmp-ipi-Remove-dev.parent-check-in-zynqmp.patch
+	patches.suse/mailbox-zynqmp-ipi-Fix-out-of-bounds-access-in-mailb.patch
 
 	########################################################
 	# end of sorted patches
