Input: psxpad-spi - add a check for the return value of spi_setup() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12375,6 +12375,7 @@
 	patches.suse/misc-fastrpc-Skip-reference-for-DMA-handles.patch
 	patches.suse/crypto-rng-Ensure-set_ent-is-always-present.patch
 	patches.suse/Input-uinput-zero-initialize-uinput_ff_upload_compat.patch
+	patches.suse/Input-psxpad-spi-add-a-check-for-the-return-value-of.patch
 
 	########################################################
 	# end of sorted patches
