mailbox: mtk-cmdq: Remove pm_runtime APIs from cmdq_mbox_send_data() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12380,6 +12380,7 @@
 	patches.suse/mailbox-zynqmp-ipi-Remove-dev.parent-check-in-zynqmp.patch
 	patches.suse/mailbox-zynqmp-ipi-Fix-out-of-bounds-access-in-mailb.patch
 	patches.suse/mailbox-zynqmp-ipi-Fix-SGI-cleanup-on-unbind.patch
+	patches.suse/mailbox-mtk-cmdq-Remove-pm_runtime-APIs-from-cmdq_mb.patch
 
 	########################################################
 	# end of sorted patches
