--- a/series.conf
+++ b/series.conf
@@ -12377,6 +12377,7 @@
 	patches.suse/Input-uinput-zero-initialize-uinput_ff_upload_compat.patch
 	patches.suse/Input-psxpad-spi-add-a-check-for-the-return-value-of.patch
 	patches.suse/mailbox-zynqmp-ipi-Remove-redundant-mbox_controller_.patch
+	patches.suse/mailbox-zynqmp-ipi-Remove-dev.parent-check-in-zynqmp.patch
 
 	########################################################
 	# end of sorted patches
