mailbox: zynqmp-ipi: Fix SGI cleanup on unbind (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12379,6 +12379,7 @@
 	patches.suse/mailbox-zynqmp-ipi-Remove-redundant-mbox_controller_.patch
 	patches.suse/mailbox-zynqmp-ipi-Remove-dev.parent-check-in-zynqmp.patch
 	patches.suse/mailbox-zynqmp-ipi-Fix-out-of-bounds-access-in-mailb.patch
+	patches.suse/mailbox-zynqmp-ipi-Fix-SGI-cleanup-on-unbind.patch
 
 	########################################################
 	# end of sorted patches
