--- a/series.conf
+++ b/series.conf
@@ -12376,6 +12376,7 @@
 	patches.suse/crypto-rng-Ensure-set_ent-is-always-present.patch
 	patches.suse/Input-uinput-zero-initialize-uinput_ff_upload_compat.patch
 	patches.suse/Input-psxpad-spi-add-a-check-for-the-return-value-of.patch
+	patches.suse/mailbox-zynqmp-ipi-Remove-redundant-mbox_controller_.patch
 
 	########################################################
 	# end of sorted patches
