mailbox: zynqmp-ipi: Fix out-of-bounds access in mailbox cleanup loop (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12378,6 +12378,7 @@
 	patches.suse/Input-psxpad-spi-add-a-check-for-the-return-value-of.patch
 	patches.suse/mailbox-zynqmp-ipi-Remove-redundant-mbox_controller_.patch
 	patches.suse/mailbox-zynqmp-ipi-Remove-dev.parent-check-in-zynqmp.patch
+	patches.suse/mailbox-zynqmp-ipi-Fix-out-of-bounds-access-in-mailb.patch
 
 	########################################################
 	# end of sorted patches
