crypto: rng - Ensure set_ent is always present (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12373,6 +12373,7 @@
 	patches.suse/misc-fastrpc-Fix-fastrpc_map_lookup-operation.patch
 	patches.suse/misc-fastrpc-fix-possible-map-leak-in-fastrpc_put_ar.patch
 	patches.suse/misc-fastrpc-Skip-reference-for-DMA-handles.patch
+	patches.suse/crypto-rng-Ensure-set_ent-is-always-present.patch
 
 	########################################################
 	# end of sorted patches
