--- a/series.conf
+++ b/series.conf
@@ -12374,6 +12374,7 @@
 	patches.suse/misc-fastrpc-fix-possible-map-leak-in-fastrpc_put_ar.patch
 	patches.suse/misc-fastrpc-Skip-reference-for-DMA-handles.patch
 	patches.suse/crypto-rng-Ensure-set_ent-is-always-present.patch
+	patches.suse/Input-uinput-zero-initialize-uinput_ff_upload_compat.patch
 
 	########################################################
 	# end of sorted patches
