--- a/series.conf
+++ b/series.conf
@@ -9825,6 +9825,7 @@
 	patches.suse/platform-x86-amd-hsmp-Report-power-via-hwmon-sensors.patch
 	patches.suse/platform-x86-amd-hsmp-acpi-Add-sysfs-files-to-display-HSMP.patch
 	patches.suse/platform-x86-amd-hsmp-fix-building-with-CONFIG_HWMON-m.patch
+	patches.suse/isofs-fix-Y2038-and-Y2156-issues-in-Rock-Ridge-TF-en.patch
 	patches.suse/tracing-Fix-compilation-warning-on-arm32.patch
 	patches.suse/x86-sgx-Prevent-attempts-to-reclaim-poisoned-pages.patch
 	patches.suse/configfs-tsm-report-Fix-NULL-dereference-of-tsm_ops.patch
