fix a leak in fcntl_dirnotify() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10808,6 +10808,7 @@
 	patches.suse/smb-client-fix-use-after-free-in-cifs_oplock_break.patch
 	patches.suse/smb-client-fix-use-after-free-in-crypt_message-when-using-async-cr.patch
 	patches.suse/isofs-Verify-inode-mode-when-loading-from-disk.patch
+	patches.suse/fix-a-leak-in-fcntl_dirnotify.patch
 	patches.suse/hwmon-corsair-cpro-Validate-the-size-of-the-received.patch
 	patches.suse/efivarfs-Fix-memory-leak-of-efivarfs_fs_info-in-fs_context.patch
 	patches.suse/Input-xpad-set-correct-controller-type-for-Acer-NGR2.patch
