readahead: fix return value of page_cache_next_miss() when no hole is found (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11529,6 +11529,7 @@
 	patches.suse/mtd-rawnand-fsmc-Add-missing-check-after-DMA-map.patch
 	patches.suse/mtd-spinand-propagate-spinand_wait-errors-from-spina.patch
 	patches.suse/mtd-rawnand-atmel-set-pmecc-data-setup-time.patch
+	patches.suse/readahead-fix-return-value-of-page_cache_next_miss-w.patch
 	patches.suse/mm-ptdump-take-the-memory-hotplug-lock-inside-ptdump_walk_.patch
 	patches.suse/maple_tree-fix-status-setup-on-restore-to-active.patch
 	patches.suse/mm-fault-in-complete-folios-instead-of-individual-pa.patch
