--- a/series.conf
+++ b/series.conf
@@ -12421,6 +12421,7 @@
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
 	patches.suse/fs-quota-create-dedicated-workqueue-for-quota_releas.patch
+	patches.suse/fs-udf-fix-OOB-read-in-lengthAllocDescs-handling.patch
 	patches.suse/ext4-fix-checks-for-orphan-inodes.patch
 	patches.suse/smb-client-fix-crypto-buffers-in-non-linear-memory.patch
 	patches.suse/NFSv4.1-fix-backchannel-max_resp_sz-verification-check.patch
