fs: Remove redundant errseq_set call in mark_buffer_write_io_error (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9016,6 +9016,7 @@
 	patches.suse/arm64-bpf-Add-BHB-mitigation-to-the-epilogue-for-cBP.patch
 	patches.suse/arm64-bpf-Only-mitigate-cBPF-programs-loaded-by-unpr.patch
 	patches.suse/arm64-proton-pack-Add-new-CPUs-k-values-for-branch-m.patch
+	patches.suse/fs-Remove-redundant-errseq_set-call-in-mark_buffer_w.patch
 	patches.suse/udf-Make-sure-i_lenExtents-is-uptodate-on-inode-evic.patch
 	patches.suse/drivers-platform-x86-amd-pmf-Check-for-invalid-sidel.patch
 	patches.suse/drivers-platform-x86-amd-pmf-Check-for-invalid-Smart.patch
