--- a/series.conf
+++ b/series.conf
@@ -7719,6 +7719,7 @@
 	patches.suse/drm-amdgpu-vcn-fix-ref-counting-for-ring-based-profi.patch
 	patches.suse/drm-amdgpu-Skip-pcie_replay_count-sysfs-creation-for.patch
 	patches.suse/drm-amdkfd-set-precise-mem-ops-caps-to-disabled-for-.patch
+	patches.suse/drm-amdgpu-mes-optimize-compute-loop-handling.patch
 	patches.suse/drm-amdgpu-discovery-check-ip_discovery-fw-file-avai.patch
 	patches.suse/drm-amdgpu-discovery-use-specific-ip_discovery.bin-f.patch
 	patches.suse/drm-amdgpu-discovery-optionally-use-fw-based-ip-disc.patch
