drm/amd/display: Don't warn when missing DCE encoder caps (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11796,6 +11796,7 @@
 	patches.suse/drm-amd-display-Adjust-DCE-8-10-clock-don-t-overcloc.patch
 	patches.suse/drm-amd-display-Find-first-CRTC-and-its-line-time-in.patch
 	patches.suse/drm-amd-display-Fill-display-clock-and-vblank-time-i.patch
+	patches.suse/drm-amd-display-Don-t-warn-when-missing-DCE-encoder-.patch
 	patches.suse/drm-amd-display-Don-t-print-errors-for-nonexistent-c.patch
 	patches.suse/drm-amd-display-Fix-fractional-fb-divider-in-set_pix.patch
 	patches.suse/drm-amd-display-Fix-DP-audio-DTO1-clock-source-on-DC.patch
