--- a/blacklist.conf
+++ b/blacklist.conf
@@ -563,3 +563,4 @@ d3f2a9587ebe68f5067f9ff624f9a83dfb911f60 # build fix only
 42988380ac67c76bb9dff8f77d7ef3eefd50b7b5 # required infrastructure highly invasive and breaks kABI
 08228941436047bdcd35a612c1aec0912a29d8cd # required infrastructure highly invasive and breaks kABI
 8631e01c2c5d1fe6705bcc0d733a0b7a17d3daac # Just hardening against theoretically broken filesystem export methods
+902cc179c931a033cd7f4242353aa2733bf8524c # Silencing KCSAN warning without substantial change
