--- a/series.conf
+++ b/series.conf
@@ -7518,6 +7518,7 @@
 	patches.suse/ext4-remove-writable-userspace-mappings-before-trunc.patch
 	patches.suse/ext4-introduce-linear-search-for-dentries.patch
 	patches.suse/ext4-protect-ext4_release_dquot-against-freezing.patch
+	patches.suse/ext4-do-not-convert-the-unwritten-extents-if-data-wr.patch
 	patches.suse/ext4-convert-EXT4_FLAGS_-defines-to-enum.patch
 	patches.suse/ext4-add-EXT4_FLAGS_EMERGENCY_RO-bit.patch
 	patches.suse/ext4-add-ext4_emergency_state-helper-function.patch
