blacklist.conf: Blacklist 26343ca0df71

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -573,6 +573,7 @@ d3f2a9587ebe68f5067f9ff624f9a83dfb911f60 # build fix only
 fd2f764826df5489b849a8937b5a093aae5b1816 # Code refactoring, no functional change
 ea3f17efd36b56c5839289716ba83eaa85893590 # Code refactoring, no functional change
 2890e5e0f49e10f3dadc5f7b7ea434e3e77e12a6 # Code refactoring, no functional change
+26343ca0df715097065b02a6cddb4a029d5b9327 # Cosmetic mount option handling fix
 
 
 
