--- a/series.conf
+++ b/series.conf
@@ -7528,6 +7528,7 @@
 	patches.suse/ext4-add-missing-brelse-for-bh2-in-ext4_dx_add_entry.patch
 	patches.suse/ext4-ignore-xattrs-past-end.patch
 	patches.suse/jbd2-remove-wrong-sb-s_sequence-check.patch
+	patches.suse/jbd2-do-not-try-to-recover-wiped-journal.patch
 	patches.suse/ext4-fix-out-of-bound-read-in-ext4_xattr_inode_dec_r.patch
 	patches.suse/ext4-goto-right-label-out_mmap_sem-in-ext4_setattr.patch
 	patches.suse/jbd2-fix-off-by-one-while-erasing-journal.patch
