blacklist.conf: Blacklist d7b0befd0932

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -574,6 +574,7 @@ fd2f764826df5489b849a8937b5a093aae5b1816 # Code refactoring, no functional chang
 ea3f17efd36b56c5839289716ba83eaa85893590 # Code refactoring, no functional change
 2890e5e0f49e10f3dadc5f7b7ea434e3e77e12a6 # Code refactoring, no functional change
 26343ca0df715097065b02a6cddb4a029d5b9327 # Cosmetic mount option handling fix
+d7b0befd09320e3356a75cb96541c030515e7f5f # Cosmetic remount message fixup
 
 
 
