blacklist.conf: Blacklist f76d4c28a46a, 6e8f57fd09c9

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -575,6 +575,8 @@ ea3f17efd36b56c5839289716ba83eaa85893590 # Code refactoring, no functional chang
 2890e5e0f49e10f3dadc5f7b7ea434e3e77e12a6 # Code refactoring, no functional change
 26343ca0df715097065b02a6cddb4a029d5b9327 # Cosmetic mount option handling fix
 d7b0befd09320e3356a75cb96541c030515e7f5f # Cosmetic remount message fixup
+f76d4c28a46a9260d85e00dafc8f46d369365d33 # Preparation for blocksize > pagesize changes we don't have
+6e8f57fd09c9fb569d10b2ccc3878155b702591a # Preparation for blocksize > pagesize changes we don't have
 
 
 
