--- a/series.conf
+++ b/series.conf
@@ -9480,6 +9480,7 @@
 	patches.suse/drm-i915-dp_mst-Work-around-Thunderbolt-sink-disconn.patch
 	patches.suse/exfat-fix-double-free-in-delayed_free.patch
 	patches.suse/ext4-inline-fix-len-overflow-in-ext4_prepare_inline_.patch
+	patches.suse/ext4-fix-calculation-of-credits-for-extent-tree-modi.patch
 	patches.suse/jbd2-fix-data-race-and-null-ptr-deref-in-jbd2_journa.patch
 	patches.suse/ext4-only-dirty-folios-when-data-journaling-regular-files.patch
 	patches.suse/NFSD-unregister-filesystem-in-case-genl_register_family-fails.patch
