--- a/series.conf
+++ b/series.conf
@@ -9483,6 +9483,7 @@
 	patches.suse/ext4-fix-calculation-of-credits-for-extent-tree-modi.patch
 	patches.suse/jbd2-fix-data-race-and-null-ptr-deref-in-jbd2_journa.patch
 	patches.suse/ext4-factor-out-ext4_get_maxbytes.patch
+	patches.suse/ext4-ensure-i_size-is-smaller-than-maxbytes.patch
 	patches.suse/ext4-only-dirty-folios-when-data-journaling-regular-files.patch
 	patches.suse/NFSD-unregister-filesystem-in-case-genl_register_family-fails.patch
 	patches.suse/NFSD-fix-race-between-nfsd-registration-and-exports_proc.patch
