--- a/series.conf
+++ b/series.conf
@@ -11424,6 +11424,7 @@
 	patches.suse/crypto-qat-fix-seq_file-position-update-in-adf_ring_.patch
 	patches.suse/crypto-hisilicon-hpre-fix-dma-unmap-sequence.patch
 	patches.suse/ext4-Make-sure-BH_New-bit-is-cleared-in-write_end-ha.patch
+	patches.suse/ext4-fix-zombie-groups-in-average-fragment-size-list.patch
 	patches.suse/ext4-do-not-BUG-when-INLINE_DATA_FL-lacks-system.dat.patch
 	patches.suse/mfd-cros_ec-Separate-charge-control-probing-from-USB.patch
 	patches.suse/mfd-axp20x-Set-explicit-ID-for-AXP313-regulator.patch
