ext4: fix largest free orders lists corruption on mb_optimize_scan switch (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11425,6 +11425,7 @@
 	patches.suse/crypto-hisilicon-hpre-fix-dma-unmap-sequence.patch
 	patches.suse/ext4-Make-sure-BH_New-bit-is-cleared-in-write_end-ha.patch
 	patches.suse/ext4-fix-zombie-groups-in-average-fragment-size-list.patch
+	patches.suse/ext4-fix-largest-free-orders-lists-corruption-on-mb_.patch
 	patches.suse/ext4-do-not-BUG-when-INLINE_DATA_FL-lacks-system.dat.patch
 	patches.suse/mfd-cros_ec-Separate-charge-control-probing-from-USB.patch
 	patches.suse/mfd-axp20x-Set-explicit-ID-for-AXP313-regulator.patch
