ext4: check fast symlink for ea_inode correctly (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11807,6 +11807,7 @@
 	patches.suse/ata-libata-scsi-Fix-CDL-control.patch
 	patches.suse/x86-bugs-Select-best-SRSO-mitigation.patch
 	patches.suse/ext4-preserve-SB_I_VERSION-on-remount.patch
+	patches.suse/ext4-check-fast-symlink-for-ea_inode-correctly.patch
 	patches.suse/jbd2-prevent-softlockup-in-jbd2_log_do_checkpoint.patch
 	patches.suse/btrfs-subpage-keep-TOWRITE-tag-until-folio-is-cleane.patch
 	patches.suse/btrfs-fix-incorrect-log-message-for-nobarrier-mount-.patch
