--- a/series.conf
+++ b/series.conf
@@ -11809,6 +11809,7 @@
 	patches.suse/ext4-preserve-SB_I_VERSION-on-remount.patch
 	patches.suse/ext4-check-fast-symlink-for-ea_inode-correctly.patch
 	patches.suse/ext4-fix-fsmap-end-of-range-reporting-with-bigalloc.patch
+	patches.suse/ext4-fix-reserved-gdt-blocks-handling-in-fsmap.patch
 	patches.suse/jbd2-prevent-softlockup-in-jbd2_log_do_checkpoint.patch
 	patches.suse/btrfs-subpage-keep-TOWRITE-tag-until-folio-is-cleane.patch
 	patches.suse/btrfs-fix-incorrect-log-message-for-nobarrier-mount-.patch
