ext4: fix hole length calculation overflow in non-extent inodes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11811,6 +11811,7 @@
 	patches.suse/ext4-fix-fsmap-end-of-range-reporting-with-bigalloc.patch
 	patches.suse/ext4-fix-reserved-gdt-blocks-handling-in-fsmap.patch
 	patches.suse/ext4-don-t-try-to-clear-the-orphan_present-feature-b.patch
+	patches.suse/ext4-fix-hole-length-calculation-overflow-in-non-ext.patch
 	patches.suse/jbd2-prevent-softlockup-in-jbd2_log_do_checkpoint.patch
 	patches.suse/btrfs-subpage-keep-TOWRITE-tag-until-folio-is-cleane.patch
 	patches.suse/btrfs-fix-incorrect-log-message-for-nobarrier-mount-.patch
