--- a/blacklist.conf
+++ b/blacklist.conf
@@ -579,3 +579,4 @@ f76d4c28a46a9260d85e00dafc8f46d369365d33 # Preparation for blocksize > pagesize 
 6e8f57fd09c9fb569d10b2ccc3878155b702591a # Preparation for blocksize > pagesize changes we don't have
 29ec9bed2395061350249ae356fb300dd82a78e7 # Hole punching on *huge* files is more restricted than it should be. Unlikely to be hit in practice.
 82e6381e23f1ea7a14f418215068aaa2ca046c84 # Unit test fix
+757fc66da91b54d4fbc414bee5c440b52560d3b7 # Comment fix
