ext4: fix an off-by-one issue during moving extents (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12443,6 +12443,7 @@
 	patches.suse/fs-quota-create-dedicated-workqueue-for-quota_releas.patch
 	patches.suse/fs-udf-fix-OOB-read-in-lengthAllocDescs-handling.patch
 	patches.suse/ext4-add-ext4_sb_bread_nofail-helper-function-for-ex.patch
+	patches.suse/ext4-fix-an-off-by-one-issue-during-moving-extents.patch
 	patches.suse/ext4-fix-checks-for-orphan-inodes.patch
 	patches.suse/smb-client-fix-crypto-buffers-in-non-linear-memory.patch
 	patches.suse/NFSv4.1-fix-backchannel-max_resp_sz-verification-check.patch
