blacklist.conf: Blacklist 29ec9bed2395

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -577,9 +577,4 @@ ea3f17efd36b56c5839289716ba83eaa85893590 # Code refactoring, no functional chang
 d7b0befd09320e3356a75cb96541c030515e7f5f # Cosmetic remount message fixup
 f76d4c28a46a9260d85e00dafc8f46d369365d33 # Preparation for blocksize > pagesize changes we don't have
 6e8f57fd09c9fb569d10b2ccc3878155b702591a # Preparation for blocksize > pagesize changes we don't have
-
-
-
-
-
-
+29ec9bed2395061350249ae356fb300dd82a78e7 # Hole punching on *huge* files is more restricted than it should be. Unlikely to be hit in practice.
