drm/amdgpu/mes: enable compute pipes across all MEC (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52653,6 +52653,7 @@
 	patches.suse/drm-amdgpu-Skip-pcie_replay_count-sysfs-creation-for.patch
 	patches.suse/drm-amdkfd-set-precise-mem-ops-caps-to-disabled-for-.patch
 	patches.suse/drm-amdgpu-mes-optimize-compute-loop-handling.patch
+	patches.suse/drm-amdgpu-mes-enable-compute-pipes-across-all-MEC.patch
 	patches.suse/drm-amdgpu-discovery-check-ip_discovery-fw-file-avai.patch
 	patches.suse/drm-amdgpu-discovery-use-specific-ip_discovery.bin-f.patch
 	patches.suse/drm-amdgpu-discovery-optionally-use-fw-based-ip-disc.patch
