--- a/series.conf
+++ b/series.conf
@@ -55534,6 +55534,7 @@
 	patches.suse/can-mcba_usb-populate-ndo_change_mtu-to-prevent-buff.patch
 	patches.suse/can-peak_usb-fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Init-DCN35-clocks-from-pre-os-HW-val.patch
+	patches.suse/drm-amd-display-remove-output_tf_change-flag.patch
 	patches.suse/drm-ast-Use-msleep-instead-of-mdelay-for-edid-read.patch
 	patches.suse/drm-gma500-Fix-null-dereference-in-hdmi-teardown.patch
 	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
