drm/amdgpu/vcn: fix ref counting for ring based profile handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52649,6 +52649,7 @@
 	patches.suse/drm-amd-display-Guard-against-setting-dispclk-low-fo.patch
 	patches.suse/drm-amdgpu-release-xcp_mgr-on-exit.patch
 	patches.suse/drm-amdgpu-grab-an-additional-reference-on-the-gang-.patch
+	patches.suse/drm-amdgpu-vcn-fix-ref-counting-for-ring-based-profi.patch
 	patches.suse/drm-amdgpu-Skip-pcie_replay_count-sysfs-creation-for.patch
 	patches.suse/drm-amdkfd-set-precise-mem-ops-caps-to-disabled-for-.patch
 	patches.suse/drm-amdgpu-discovery-check-ip_discovery-fw-file-avai.patch
