--- a/series.conf
+++ b/series.conf
@@ -54931,6 +54931,7 @@
 	patches.suse/fbcon-Fix-outdated-registered_fb-reference-in-commen.patch
 	patches.suse/drm-xe-uapi-Correct-sync-type-definition-in-comments.patch
 	patches.suse/drm-xe-xe_query-Use-separate-iterator-while-filling-.patch
+	patches.suse/drm-amdgpu-gfx10-fix-KGQ-reset-sequence.patch
 	patches.suse/drm-amd-pm-powerplay-hwmgr-smu_helper-fix-order-of-m.patch
 	patches.suse/drm-amdgpu-gfx9-fix-kiq-locking-in-KCQ-reset.patch
 	patches.suse/drm-amdgpu-gfx9.4.3-fix-kiq-locking-in-KCQ-reset.patch
