--- a/series.conf
+++ b/series.conf
@@ -55614,6 +55614,7 @@
 	patches.suse/drm-amd-pm-Disable-SCLK-switching-on-Oland-with-high.patch
 	patches.suse/drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-svm_ioc.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
+	patches.suse/drm-amdgpu-Fix-allocating-extra-dwords-for-rings-v2.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
 	patches.suse/media-lirc-Fix-error-handling-in-lirc_register.patch
