drm/amd/amdgpu: Declare isp firmware binary file (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55466,6 +55466,7 @@
 	patches.suse/drm-amd-display-Disable-DPCD-Probe-Quirk.patch
 	patches.suse/drm-amdgpu-fix-a-memory-leak-in-fence-cleanup-when-u.patch
 	patches.suse/drm-amd-display-use-udelay-rather-than-fsleep.patch
+	patches.suse/drm-amd-amdgpu-Declare-isp-firmware-binary-file.patch
 	patches.suse/drm-amdgpu-vcn4-Fix-IB-parsing-with-multiple-engine-.patch
 	patches.suse/drm-amdgpu-vcn-Allow-limiting-ctx-to-instance-0-for-.patch
 	patches.suse/drm-mediatek-fix-potential-OF-node-use-after-free.patch
