isofs: Verify inode mode when loading from disk (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33488,6 +33488,7 @@
 	patches.suse/nvmet-tcp-fix-callback-lock-for-TLS-handshake.patch
 	patches.suse/smb-client-fix-use-after-free-in-cifs_oplock_break.patch
 	patches.suse/smb-client-fix-use-after-free-in-crypt_message-when-using-async-cr.patch
+	patches.suse/isofs-Verify-inode-mode-when-loading-from-disk.patch
 	patches.suse/hwmon-corsair-cpro-Validate-the-size-of-the-received.patch
 	patches.suse/sched-freezer-Remove-unnecessary-warning-in-__thaw_task.patch
 	patches.suse/Revert-cgroup_freezer-cgroup_freezing-Check-if-not-frozen.patch
