blacklist.conf: Blacklist 3203b3ab0fcf

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1152,3 +1152,4 @@ d613f53c83ec47089c4e25859d5e8e0359f6f8da # CVE-2025-39883 https://bugzilla.suse.
 3b3b84aacb4420226576c9732e7b539ca7b79633 # causes kernel panic with BPF selftests, fix is difficult to backport, see bsc#1250574
 82a0302e7167d0b7c6cde56613db3748f8dd806d # comment only
 72b7ceca857f38a8ca7c5629feffc63769638974 # Theoretical workqueue lockup which can be triggered only by f2fs (which we don't compile)
+3203b3ab0fcf22132caadd72caebfad47bf0dd2b # Theoretical issue with no practical impact for us (we have CONFIG_DEBUG_VM disabled) even if it hits
