blacklist.conf: Blacklist 5d1f903f75a8

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1154,3 +1154,4 @@ d613f53c83ec47089c4e25859d5e8e0359f6f8da # CVE-2025-39883 https://bugzilla.suse.
 72b7ceca857f38a8ca7c5629feffc63769638974 # Theoretical workqueue lockup which can be triggered only by f2fs (which we don't compile)
 3203b3ab0fcf22132caadd72caebfad47bf0dd2b # Theoretical issue with no practical impact for us (we have CONFIG_DEBUG_VM disabled) even if it hits
 c1ed39ec116272935528ca9b348b8ee79b0791da # Style cleanup
+5d1f903f75a80daa4dfb3d84e114ec8ecbf29956 # Fix of a theoretical corner case with possible userspace regressions
