--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1155,3 +1155,4 @@ d613f53c83ec47089c4e25859d5e8e0359f6f8da # CVE-2025-39883 https://bugzilla.suse.
 3203b3ab0fcf22132caadd72caebfad47bf0dd2b # Theoretical issue with no practical impact for us (we have CONFIG_DEBUG_VM disabled) even if it hits
 c1ed39ec116272935528ca9b348b8ee79b0791da # Style cleanup
 5d1f903f75a80daa4dfb3d84e114ec8ecbf29956 # Fix of a theoretical corner case with possible userspace regressions
+578d7699e5c2add8c2e9549d9d75dfb56c460cb3 # Fix for !CONFIG_MMU
