--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1156,3 +1156,4 @@ d613f53c83ec47089c4e25859d5e8e0359f6f8da # CVE-2025-39883 https://bugzilla.suse.
 c1ed39ec116272935528ca9b348b8ee79b0791da # Style cleanup
 5d1f903f75a80daa4dfb3d84e114ec8ecbf29956 # Fix of a theoretical corner case with possible userspace regressions
 578d7699e5c2add8c2e9549d9d75dfb56c460cb3 # Fix for !CONFIG_MMU
+fe4419801617514765974f3e796269bc512ad146 # Fix for !CONFIG_MMU
