blacklist.conf: Blacklist ccb49011bb2e

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1157,3 +1157,4 @@ c1ed39ec116272935528ca9b348b8ee79b0791da # Style cleanup
 5d1f903f75a80daa4dfb3d84e114ec8ecbf29956 # Fix of a theoretical corner case with possible userspace regressions
 578d7699e5c2add8c2e9549d9d75dfb56c460cb3 # Fix for !CONFIG_MMU
 fe4419801617514765974f3e796269bc512ad146 # Fix for !CONFIG_MMU
+ccb49011bb2ebfd66164dbf68c5bff48917bb5ef # Sparse type annotation fix
