--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1158,3 +1158,4 @@ c1ed39ec116272935528ca9b348b8ee79b0791da # Style cleanup
 578d7699e5c2add8c2e9549d9d75dfb56c460cb3 # Fix for !CONFIG_MMU
 fe4419801617514765974f3e796269bc512ad146 # Fix for !CONFIG_MMU
 ccb49011bb2ebfd66164dbf68c5bff48917bb5ef # Sparse type annotation fix
+5133bee62f0ea5d4c316d503cc0040cac5637601 # Missing feature for kernfs about which nobody complained since kernfs was created
