blacklist.conf: Blacklist cddba0af0b79

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1159,3 +1159,4 @@ c1ed39ec116272935528ca9b348b8ee79b0791da # Style cleanup
 fe4419801617514765974f3e796269bc512ad146 # Fix for !CONFIG_MMU
 ccb49011bb2ebfd66164dbf68c5bff48917bb5ef # Sparse type annotation fix
 5133bee62f0ea5d4c316d503cc0040cac5637601 # Missing feature for kernfs about which nobody complained since kernfs was created
+cddba0af0b7919e93134469f6fdf29a7d362768a # kconfig hierarchy fixup
