blacklist.conf: Blacklist 8bfb40be31dd

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1161,3 +1161,4 @@ ccb49011bb2ebfd66164dbf68c5bff48917bb5ef # Sparse type annotation fix
 5133bee62f0ea5d4c316d503cc0040cac5637601 # Missing feature for kernfs about which nobody complained since kernfs was created
 cddba0af0b7919e93134469f6fdf29a7d362768a # kconfig hierarchy fixup
 68d6f4f3fbd9b1baae53e7cf33fb3362b5a21494 # Code cleanup
+8bfb40be31ddea0cb4664b352e1797cfe6c91976 # Code cleanup
