--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1162,3 +1162,4 @@ ccb49011bb2ebfd66164dbf68c5bff48917bb5ef # Sparse type annotation fix
 cddba0af0b7919e93134469f6fdf29a7d362768a # kconfig hierarchy fixup
 68d6f4f3fbd9b1baae53e7cf33fb3362b5a21494 # Code cleanup
 8bfb40be31ddea0cb4664b352e1797cfe6c91976 # Code cleanup
+ee5814dddefbaa181cb247a75676dd5103775db1 # kmemleak false positive fixup
