blacklist.conf: Blacklist 41e8149c8892

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1163,3 +1163,4 @@ cddba0af0b7919e93134469f6fdf29a7d362768a # kconfig hierarchy fixup
 68d6f4f3fbd9b1baae53e7cf33fb3362b5a21494 # Code cleanup
 8bfb40be31ddea0cb4664b352e1797cfe6c91976 # Code cleanup
 ee5814dddefbaa181cb247a75676dd5103775db1 # kmemleak false positive fixup
+41e8149c8892ed1962bd15350b3c3e6e90cba7f4 # New feature for /proc/pid/mem behavior
