--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1165,3 +1165,4 @@ cddba0af0b7919e93134469f6fdf29a7d362768a # kconfig hierarchy fixup
 ee5814dddefbaa181cb247a75676dd5103775db1 # kmemleak false positive fixup
 41e8149c8892ed1962bd15350b3c3e6e90cba7f4 # New feature for /proc/pid/mem behavior
 30dac24e14b52e1787572d1d4e06eeabe8a63630 # Code cleanup
+3273d8ad947dea925a65a78ca29e5351c960c801 # f2fs is disabled
