--- a/series.conf
+++ b/series.conf
@@ -32550,6 +32550,7 @@
 	patches.suse/arm64-bpf-Add-BHB-mitigation-to-the-epilogue-for-cBPF-prog.patch
 	patches.suse/arm64-bpf-Only-mitigate-cBPF-programs-loaded-by-unprivileg.patch
 	patches.suse/arm64-proton-pack-Add-new-CPUs-k-values-for-branch-mitigat.patch
+	patches.suse/udf-Make-sure-i_lenExtents-is-uptodate-on-inode-evic.patch
 	patches.suse/platform-x86-thinkpad_acpi-Support-also-NEC-Lavie-X1.patch
 	patches.suse/platform-x86-amd-pmc-Declare-quirk_spurious_8042-for.patch
 	patches.suse/platform-x86-asus-wmi-Fix-wlan_ctrl_by_user-detectio.patch
