--- a/series.conf
+++ b/series.conf
@@ -33565,6 +33565,7 @@
 	patches.suse/NFSD-detect-mismatch-of-file-handle-and-delegation-stateid-in-OPEN-op.patch
 	patches.suse/ceph-parse_longname-strrchr-expects-NUL-terminated-s.patch
 	patches.suse/eventpoll-Fix-semi-unbounded-recursion.patch
+	patches.suse/udf-Verify-partition-map-count.patch
 	patches.suse/hfs-fix-not-erasing-deleted-b-tree-node-issue.patch
 	patches.suse/hfsplus-make-splice-write-available-again.patch
 	patches.suse/hfs-make-splice-write-available-again.patch
