--- a/series.conf
+++ b/series.conf
@@ -24249,6 +24249,7 @@
 	patches.suse/0001-net-sched-tcindex-Do-not-use-perfect-hashing.patch
 	patches.suse/af_unix-Fix-null-ptr-deref-in-unix_stream_sendpage.patch
 	patches.suse/netfilter-nf_tables-fix-64-bit-load-issue-in-nft_byt.patch
+	patches.suse/netfilter-nft_objref-validate-objref-and-objrefmap-e.patch
 
 	########################################################
 	# BPF
