platform/x86/amd/pmc: Send OS_HINT command for new AMD platform (bsc#1243112).

--- a/series.conf
+++ b/series.conf
@@ -43968,6 +43968,7 @@
 	patches.suse/x86-mm-Fix-pti_clone_pgtable-alignment-assumption.patch
 	patches.suse/x86-mm-Fix-pti_clone_entry_text-for-i386.patch
 	patches.suse/platform-x86-intel-vbtn-Protect-ACPI-notify-handler-.patch
+	patches.suse/platform-x86-amd-pmc-Send-OS_HINT-command-for-new-AM.patch
 	patches.suse/platform-x86-intel-ifs-Initialize-union-ifs_status-t.patch
 	patches.suse/vhost-vdpa-switch-to-use-vmf_insert_pfn-in-the-fault.patch
 	patches.suse/power-supply-axp288_charger-Fix-constant_charge_volt.patch
