--- a/series.conf
+++ b/series.conf
@@ -55512,6 +55512,7 @@
 	patches.suse/power-supply-bq27xxx-restrict-no-battery-detection-t.patch
 	patches.suse/btrfs-fix-invalid-extref-key-setup-when-replaying-de.patch
 	patches.suse/nilfs2-fix-CFI-failure-when-accessing-sys-fs-nilfs2-features.patch
+	patches.suse/platform-x86-amd-pmc-Add-MECHREVO-Yilong15Pro-to-spu.patch
 	patches.suse/KVM-arm64-vgic-fix-incorrect-spinlock-API-usage.patch
 	patches.suse/KVM-SVM-Sync-TPR-from-LAPIC-into-VMCB-V_TPR-even-if-.patch
 	patches.suse/KVM-s390-Fix-incorrect-usage-of-mmu_notifier_register.patch
