--- a/series.conf
+++ b/series.conf
@@ -22177,6 +22177,7 @@
 	patches.suse/platform-x86-intel-pmc-arl-Add-GBE-LTR-ignore-during.patch
 	patches.suse/platform-x86-intel-pmc-lnl-Add-GBE-LTR-ignore-during.patch
 	patches.suse/platform-x86-intel-pmc-Add-missing-extern.patch
+	patches.suse/platform-x86-amd-pmc-Send-OS_HINT-command-for-AMDI00.patch
 	patches.suse/ipmi-Use-regspacings-passed-as-a-module-parameter.patch
 	patches.suse/efivarfs-force-RO-when-remounting-if-SetVariable-is-.patch
 	patches.suse/efivarfs-Move-efivar-availability-check-into-FS-cont.patch
