--- a/series.conf
+++ b/series.conf
@@ -22180,6 +22180,7 @@
 	patches.suse/platform-x86-amd-pmc-Send-OS_HINT-command-for-AMDI00.patch
 	patches.suse/platform-x86-amd-pmc-Add-VPE-information-for-AMDI000.patch
 	patches.suse/platform-x86-amd-pmc-call-amd_pmc_get_ip_info-during.patch
+	patches.suse/platform-x86-amd-pmc-Add-idlemask-support-for-1Ah-fa.patch
 	patches.suse/ipmi-Use-regspacings-passed-as-a-module-parameter.patch
 	patches.suse/efivarfs-force-RO-when-remounting-if-SetVariable-is-.patch
 	patches.suse/efivarfs-Move-efivar-availability-check-into-FS-cont.patch
