platform/x86/amd/pmc: Add VPE information for AMDI000A platform (bsc#1243112).

--- a/series.conf
+++ b/series.conf
@@ -22178,6 +22178,7 @@
 	patches.suse/platform-x86-intel-pmc-lnl-Add-GBE-LTR-ignore-during.patch
 	patches.suse/platform-x86-intel-pmc-Add-missing-extern.patch
 	patches.suse/platform-x86-amd-pmc-Send-OS_HINT-command-for-AMDI00.patch
+	patches.suse/platform-x86-amd-pmc-Add-VPE-information-for-AMDI000.patch
 	patches.suse/ipmi-Use-regspacings-passed-as-a-module-parameter.patch
 	patches.suse/efivarfs-force-RO-when-remounting-if-SetVariable-is-.patch
 	patches.suse/efivarfs-Move-efivar-availability-check-into-FS-cont.patch
