--- a/series.conf
+++ b/series.conf
@@ -51031,6 +51031,7 @@
 	patches.suse/libperf-cpumap-Grow-array-of-read-CPUs-in-smaller-increments.patch
 	patches.suse/platform-x86-amd-hsmp-Add-support-for-HSMP-protocol-versio.patch
 	patches.suse/platform-x86-amd-pmc-Use-ARRAY_SIZE-to-fill-num_ips-.patch
+	patches.suse/platform-x86-amd-pmc-Update-IP-information-structure.patch
 	patches.suse/platform-x86-serdev_helpers-Check-for-serial_ctrl_ui.patch
 	patches.suse/platform-x86-int3472-Check-for-adev-NULL.patch
 	patches.suse/platform-x86-firmware_attributes_class-Move-include-.patch
