--- a/series.conf
+++ b/series.conf
@@ -51034,6 +51034,7 @@
 	patches.suse/platform-x86-amd-pmc-Update-IP-information-structure.patch
 	patches.suse/platform-x86-serdev_helpers-Check-for-serial_ctrl_ui.patch
 	patches.suse/platform-x86-int3472-Check-for-adev-NULL.patch
+	patches.suse/platform-x86-amd-pmc-Use-guard-mutex.patch
 	patches.suse/platform-x86-firmware_attributes_class-Move-include-.patch
 	patches.suse/platform-x86-firmware_attributes_class-Simplify-API.patch
 	patches.suse/platform-x86-think-lmi-Directly-use-firmware_attribu.patch
