platform/x86/amd/pmc: Notify user when platform does not support s0ix transition (bsc#1243112).

--- a/series.conf
+++ b/series.conf
@@ -52222,6 +52222,7 @@
 	patches.suse/ALSA-hda-realtek-Bass-speaker-fixup-for-ASUS-UM5606K.patch
 	patches.suse/platform-x86-amd-Use-y-instead-of-objs-in-Makefiles.patch
 	patches.suse/platform-x86-dell-ddv-Fix-temperature-calculation.patch
+	patches.suse/platform-x86-amd-pmc-Notify-user-when-platform-does-.patch
 	patches.suse/HID-remove-superfluous-and-wrong-Makefile-entry-for-.patch
 	patches.suse/HID-pidff-Fix-null-pointer-dereference-in-pidff_find.patch
 	patches.suse/HID-hid-plantronics-Add-mic-mute-mapping-and-general.patch
