--- a/series.conf
+++ b/series.conf
@@ -55557,6 +55557,7 @@
 	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
 	patches.suse/fbcon-Fix-OOB-access-in-font-allocation.patch
 	patches.suse/drm-panthor-Defer-scheduler-entitiy-destruction-to-q.patch
+	patches.suse/platform-x86-amd-pmc-Add-Stellaris-Slim-Gen6-AMD-to-.patch
 	patches.suse/afs-Fix-potential-null-pointer-dereference-in-afs_put_server.patch
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
 	patches.suse/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
