platform/x86/amd/pmc: Fix SMU command submission path on new AMD platform (bsc#1243112).

--- a/series.conf
+++ b/series.conf
@@ -44409,6 +44409,7 @@
 	patches.suse/smb-client-avoid-dereferencing-rdata-NULL-in-smb2_ne.patch
 	patches.suse/btrfs-run-delayed-iputs-when-flushing-delalloc.patch
 	patches.suse/btrfs-fix-a-use-after-free-when-hitting-errors-insid.patch
+	patches.suse/platform-x86-amd-pmc-Fix-SMU-command-submission-path.patch
 	patches.suse/platform-x86-x86-android-tablets-Make-Lenovo-Yoga-Ta.patch
 	patches.suse/pktgen-use-cpus_read_lock-in-pg_net_init.patch
 	patches.suse/msft-hv-3045-net-mana-Fix-race-of-mana_hwc_post_rx_wqe-and-new-hw.patch
