platform/x86/amd: pmc: Add new ACPI ID AMDI000B (bsc#1243112).

--- a/series.conf
+++ b/series.conf
@@ -37272,6 +37272,7 @@
 	patches.suse/tools-power-x86-intel-speed-select-Display-CPU-as-None-for-1.patch
 	patches.suse/tools-power-x86-intel-speed-select-v1.19-release.patch
 	patches.suse/platform-x86-ISST-Support-SST-BF-and-SST-TF-per-level.patch
+	patches.suse/platform-x86-amd-pmc-Add-new-ACPI-ID-AMDI000B.patch
 	patches.suse/ARM-9362-1-coresight-catu-drop-owner-assignment.patch
 	patches.suse/ARM-9363-1-coresight-etm3x-drop-owner-assignment.patch
 	patches.suse/ARM-9364-1-coresight-replicator-drop-owner-assignmen.patch
