platform/x86/amd/pmc: Remove unnecessary line breaks (bsc#1243112).

--- a/series.conf
+++ b/series.conf
@@ -52223,6 +52223,7 @@
 	patches.suse/platform-x86-amd-Use-y-instead-of-objs-in-Makefiles.patch
 	patches.suse/platform-x86-dell-ddv-Fix-temperature-calculation.patch
 	patches.suse/platform-x86-amd-pmc-Notify-user-when-platform-does-.patch
+	patches.suse/platform-x86-amd-pmc-Remove-unnecessary-line-breaks.patch
 	patches.suse/HID-remove-superfluous-and-wrong-Makefile-entry-for-.patch
 	patches.suse/HID-pidff-Fix-null-pointer-dereference-in-pidff_find.patch
 	patches.suse/HID-hid-plantronics-Add-mic-mute-mapping-and-general.patch
