netfilter: nft_objref: validate objref and objrefmap expressions (bsc#1250237).
 No CVE available yet, please see the bugzilla ticket referenced.

--- a/series.conf
+++ b/series.conf
@@ -12651,6 +12651,7 @@
 	patches.suse/0002-ipv6-sr-factor-seg6_hmac_exit-s-per-algo-code-int.patch
 	patches.suse/0003-ipv6-sr-factor-seg6_hmac_init_algo-s-per-algo-cod.patch
 	patches.suse/0004-ipv6-sr-continue-initialization-at-ENOENT-HMAC-in.patch
+	patches.suse/netfilter-nft_objref-validate-objref-and-objrefmap-e.patch
 
 	########################################################
 	# BPF
