iomap: Fix iomap_adjust_read_range for plen calculation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -25929,6 +25929,7 @@
 	patches.suse/cachefiles-flush-all-requests-after-setting-CACHEFILE.patch
 	patches.suse/cachefiles-make-on-demand-read-killable.patch
 	patches.suse/fs-file-fix-the-check-in-find_next_fd.patch
+	patches.suse/iomap-Fix-iomap_adjust_read_range-for-plen-calculati.patch
 	patches.suse/NFSv4-Fix-memory-leak-in-nfs4_set_security_label.patch
 	patches.suse/nfs-propagate-readlink-errors-in-nfs_symlink_filler.patch
 	patches.suse/nfs-Avoid-flushing-many-pages-with-NFS_FILE_SYNC.patch
