iomap: handle a post-direct I/O invalidate race in iomap_write_delalloc_release (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -28253,6 +28253,7 @@
 	patches.suse/i2c-isch-Add-missed-else.patch
 	patches.suse/i2c-qcom-geni-Use-IRQF_NO_AUTOEN-flag-in-request_irq.patch
 	patches.suse/kthread-Fix-task-state-in-kthread-worker-if-being-frozen.patch
+	patches.suse/iomap-handle-a-post-direct-I-O-invalidate-race-in-io.patch
 	patches.suse/ext4-filesystems-without-casefold-feature-cannot-be-.patch
 	patches.suse/ext4-correct-encrypted-dentry-name-hash-when-not-cas.patch
 	patches.suse/ext4-no-need-to-continue-when-the-number-of-entries-i.patch
