blacklist.conf: Blacklist 8e3c15ee0d29

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1168,3 +1168,4 @@ ee5814dddefbaa181cb247a75676dd5103775db1 # kmemleak false positive fixup
 3273d8ad947dea925a65a78ca29e5351c960c801 # f2fs is disabled
 b53fdb215d13f8e9c29541434bf2d14dac8bcbdc # Just additional code hardening
 f7a4874d977bf4202ad575031222e78809a36292 # Small perf optimization
+8e3c15ee0d292c413c66fe10201d1b035a0bea72 # Code cleanup
