--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1169,3 +1169,4 @@ ee5814dddefbaa181cb247a75676dd5103775db1 # kmemleak false positive fixup
 b53fdb215d13f8e9c29541434bf2d14dac8bcbdc # Just additional code hardening
 f7a4874d977bf4202ad575031222e78809a36292 # Small perf optimization
 8e3c15ee0d292c413c66fe10201d1b035a0bea72 # Code cleanup
+43d0105e2c7523cc6b14cad65e2044e829c0a07a # Just optimization of hole punching
