ext4: reorder capability check last (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31823,6 +31823,7 @@
 	patches.suse/ext4-fix-out-of-bound-read-in-ext4_xattr_inode_dec_r.patch
 	patches.suse/ext4-goto-right-label-out_mmap_sem-in-ext4_setattr.patch
 	patches.suse/jbd2-fix-off-by-one-while-erasing-journal.patch
+	patches.suse/ext4-reorder-capability-check-last.patch
 	patches.suse/ext4-don-t-over-report-free-space-or-inodes-in-statv.patch
 	patches.suse/jbd2-add-a-missing-data-flush-during-file-and-fs-syn.patch
 	patches.suse/ext4-define-ext4_journal_destroy-wrapper.patch
