--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1170,3 +1170,5 @@ b53fdb215d13f8e9c29541434bf2d14dac8bcbdc # Just additional code hardening
 f7a4874d977bf4202ad575031222e78809a36292 # Small perf optimization
 8e3c15ee0d292c413c66fe10201d1b035a0bea72 # Code cleanup
 43d0105e2c7523cc6b14cad65e2044e829c0a07a # Just optimization of hole punching
+26343ca0df715097065b02a6cddb4a029d5b9327 # Cosmetic mount option handling fix
+d7b0befd09320e3356a75cb96541c030515e7f5f # Cosmetic remount message fix
