--- a/series.conf
+++ b/series.conf
@@ -32815,6 +32815,7 @@
 	patches.suse/drm-msm-gpu-Fix-crash-when-throttling-GPU-immediatel.patch
 	patches.suse/exfat-fix-double-free-in-delayed_free.patch
 	patches.suse/ext4-inline-fix-len-overflow-in-ext4_prepare_inline_.patch
+	patches.suse/ext4-fix-calculation-of-credits-for-extent-tree-modi.patch
 	patches.suse/jbd2-fix-data-race-and-null-ptr-deref-in-jbd2_journa.patch
 	patches.suse/ext4-only-dirty-folios-when-data-journaling-regular-files.patch
 	patches.suse/nfsd-nfsd4_spo_must_allow-must-check-this-is-a-v4-compound-request.patch
