netfilter: nft_objref: validate objref and objrefmap expressions (bsc#1250237).
 No CVE available yet, please see the bugzilla ticket referenced.

--- a/series.conf
+++ b/series.conf
@@ -34708,6 +34708,7 @@
 	patches.suse/net-allow-retransmitting-a-TCP-packet-if-original-is.patch
 	patches.suse/powerpc-pseries-mobility-notify-network-peers-after-.patch
 	patches.suse/netfilter-nf_tables-fix-64-bit-load-issue-in-nft_byt.patch
+	patches.suse/netfilter-nft_objref-validate-objref-and-objrefmap-e.patch
 
 	########################################################
 	# BPF
