--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1172,3 +1172,4 @@ f7a4874d977bf4202ad575031222e78809a36292 # Small perf optimization
 43d0105e2c7523cc6b14cad65e2044e829c0a07a # Just optimization of hole punching
 26343ca0df715097065b02a6cddb4a029d5b9327 # Cosmetic mount option handling fix
 d7b0befd09320e3356a75cb96541c030515e7f5f # Cosmetic remount message fix
+29ec9bed2395061350249ae356fb300dd82a78e7 # Theoretical hole punching fix for *huge* files
