ext4: ensure i_size is smaller than maxbytes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32818,6 +32818,7 @@
 	patches.suse/ext4-fix-calculation-of-credits-for-extent-tree-modi.patch
 	patches.suse/jbd2-fix-data-race-and-null-ptr-deref-in-jbd2_journa.patch
 	patches.suse/ext4-factor-out-ext4_get_maxbytes.patch
+	patches.suse/ext4-ensure-i_size-is-smaller-than-maxbytes.patch
 	patches.suse/ext4-only-dirty-folios-when-data-journaling-regular-files.patch
 	patches.suse/nfsd-nfsd4_spo_must_allow-must-check-this-is-a-v4-compound-request.patch
 	patches.suse/nfsd-Initialize-ssc-before-laundromat_work-to-prevent-NULL-dereference.patch
