--- a/series.conf
+++ b/series.conf
@@ -33851,6 +33851,7 @@
 	patches.suse/crypto-qat-fix-DMA-direction-for-compression-on-GEN2.patch
 	patches.suse/crypto-qat-fix-seq_file-position-update-in-adf_ring_.patch
 	patches.suse/crypto-hisilicon-hpre-fix-dma-unmap-sequence.patch
+	patches.suse/ext4-fix-zombie-groups-in-average-fragment-size-list.patch
 	patches.suse/ext4-do-not-BUG-when-INLINE_DATA_FL-lacks-system.dat.patch
 	patches.suse/fs-orangefs-use-snprintf-instead-of-sprintf.patch
 	patches.suse/fs-orangefs-Allow-2-more-characters-in-do_c_string.patch
