ext4: preserve SB_I_VERSION on remount (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34103,6 +34103,7 @@
 	patches.suse/scsi-lpfc-Fix-wrong-function-reference-in-a-comment.patch
 	patches.suse/scsi-lpfc-Remove-redundant-assignment-to-avoid-memor.patch
 	patches.suse/ata-libata-scsi-Fix-CDL-control.patch
+	patches.suse/ext4-preserve-SB_I_VERSION-on-remount.patch
 	patches.suse/jbd2-prevent-softlockup-in-jbd2_log_do_checkpoint.patch
 	patches.suse/fs-buffer-fix-use-after-free-when-call-bh_read-helpe.patch
 	patches.suse/use-uniform-permission-checks-for-all-mount-propagat.patch
