--- a/series.conf
+++ b/series.conf
@@ -34105,6 +34105,7 @@
 	patches.suse/ata-libata-scsi-Fix-CDL-control.patch
 	patches.suse/ext4-preserve-SB_I_VERSION-on-remount.patch
 	patches.suse/ext4-check-fast-symlink-for-ea_inode-correctly.patch
+	patches.suse/ext4-fix-fsmap-end-of-range-reporting-with-bigalloc.patch
 	patches.suse/jbd2-prevent-softlockup-in-jbd2_log_do_checkpoint.patch
 	patches.suse/fs-buffer-fix-use-after-free-when-call-bh_read-helpe.patch
 	patches.suse/use-uniform-permission-checks-for-all-mount-propagat.patch
