ext4: fix checks for orphan inodes (bsc#1250119).

--- a/series.conf
+++ b/series.conf
@@ -34471,6 +34471,7 @@
 	patches.suse/Squashfs-add-additional-inode-sanity-checking.patch
 	patches.suse/Squashfs-reject-negative-file-sizes-in-squashfs_read_inode.patch
 	patches.suse/fs-udf-fix-OOB-read-in-lengthAllocDescs-handling.patch
+	patches.suse/ext4-fix-checks-for-orphan-inodes.patch
 	patches.suse/orangefs-Remove-unused-type-in-macro-fill_default_sys_attrs.patch
 	patches.suse/NFSv4.1-fix-backchannel-max_resp_sz-verification-check.patch
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
